dfir_rs/tests/compile-fail-stable/surface_demuxenum_wrongenum.rs
../compile-fail/surface_demuxenum_wrongenum.rs